--- a/pom.xml
+++ b/pom.xml
@@ -110,12 +110,30 @@
 		</dependency>
 	
 		<!-- Test -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${org.springframework-version}</version>
+            <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>log4j</groupId>
+                    <artifactId>log4j</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.7</version>
 			<scope>test</scope>
-		</dependency>        
+		</dependency>
+		<dependency>
+		<groupId>org.mockito</groupId>
+		    <artifactId>mockito-core</artifactId>  
+		    <version>1.9.0</version> 
+		    <scope>test</scope>
+        </dependency>
 	</dependencies>
     <build>
         <plugins>
