--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -2,12 +2,29 @@
 <web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
+	
+	<!-- Configure ContextLoaderListener to use AnnotationConfigWebApplicationContext
+			instead of the default XmlWebApplicationContext -->
+	<context-param>
+	    <param-name>contextClass</param-name>
+	    <param-value>
+	    	org.springframework.web.context.support.AnnotationConfigWebApplicationContext
+		</param-value>
+	</context-param>
+	<!-- Configuration locations must consist of one or more comma- or space-delimited
+	     fully-qualified @Configuration classes. Fully-qualified packages may also be
+	     specified for component-scanning -->
+	<context-param>
+	    <param-name>contextConfigLocation</param-name>
+	    <param-value>com.garfiny.relationships.infrastructure.config.ApplicationConfig</param-value>
+	</context-param>
+
 
 	<!-- The definition of the Root Spring Container shared by all Servlets and Filters -->
-	<context-param>
-		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath:/spring/root-context.xml</param-value>
-	</context-param>
+<!-- 	<context-param> -->
+<!-- 		<param-name>contextConfigLocation</param-name> -->
+<!-- 		<param-value>classpath:/spring/root-context.xml</param-value> -->
+<!-- 	</context-param> -->
 	
 	<!-- Creates the Spring Container shared by all Servlets and Filters -->
 	<listener>
@@ -16,17 +33,27 @@
 
 	<!-- Processes application requests -->
 	<servlet>
-		<servlet-name>appServlet</servlet-name>
+		<servlet-name>dispatcher</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<!-- Configure DispatcherServlet to use AnnotationConfigWebApplicationContext
+		     instead of the default XmlWebApplicationContext -->
 		<init-param>
-			<param-name>contextConfigLocation</param-name>
-			<param-value>/WEB-INF/spring/appServlet/servlet-context.xml</param-value>
+		    <param-name>contextClass</param-name>
+		    <param-value>
+		        org.springframework.web.context.support.AnnotationConfigWebApplicationContext
+		    </param-value>
 		</init-param>
+		<!-- Again, config locations must consist of one or more comma- or space-delimited
+		     and fully-qualified @Configuration classes -->
+		<init-param>
+ 		    <param-name>contextConfigLocation</param-name>
+ 		    <param-value>com.garfiny.relationships.infrastructure.config.MvcConfig</param-value>
+ 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 		
 	<servlet-mapping>
-		<servlet-name>appServlet</servlet-name>
+		<servlet-name>dispatcher</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 
