--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,59 +3,73 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
 	
+	<display-name>Relationships</display-name>
+
+    <description>relationships management system</description>
+ 
+    <context-param>
+        <param-name>defaultHtmlEscape</param-name>
+        <param-value>true</param-value>
+    </context-param>
+     
+    <session-config>
+        <session-timeout>30</session-timeout>
+    </session-config>
+     
+    <error-page>
+        <exception-type>java.lang.Exception</exception-type>
+        <location>/uncaughtException</location>
+    </error-page>
+     
+    <error-page>
+        <error-code>404</error-code>
+        <location>/resourceNotFound</location>
+    </error-page>
+
+	
 	<!-- Configure ContextLoaderListener to use AnnotationConfigWebApplicationContext
 			instead of the default XmlWebApplicationContext -->
-	<context-param>
-	    <param-name>contextClass</param-name>
-	    <param-value>
-	    	org.springframework.web.context.support.AnnotationConfigWebApplicationContext
-		</param-value>
-	</context-param>
+<!-- 	<context-param> -->
+<!-- 	    <param-name>contextClass</param-name> -->
+<!-- 	    <param-value> -->
+<!-- 	    	org.springframework.web.context.support.AnnotationConfigWebApplicationContext -->
+<!-- 		</param-value> -->
+<!-- 	</context-param> -->
 	<!-- Configuration locations must consist of one or more comma- or space-delimited
 	     fully-qualified @Configuration classes. Fully-qualified packages may also be
 	     specified for component-scanning -->
-	<context-param>
-	    <param-name>contextConfigLocation</param-name>
-	    <param-value>com.garfiny.relationships.infrastructure.config.ApplicationConfig</param-value>
-	</context-param>
-
-
-	<!-- The definition of the Root Spring Container shared by all Servlets and Filters -->
 <!-- 	<context-param> -->
-<!-- 		<param-name>contextConfigLocation</param-name> -->
-<!-- 		<param-value>classpath:/spring/root-context.xml</param-value> -->
+<!-- 	    <param-name>contextConfigLocation</param-name> -->
+<!-- 	    <param-value>com.garfiny.relationships.infrastructure.config.ApplicationConfig</param-value> -->
 <!-- 	</context-param> -->
-	
+
+
 	<!-- Creates the Spring Container shared by all Servlets and Filters -->
 	<!-- Bootstrap the root application context as usual using ContextLoaderListener -->
-	<listener>
-		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-	</listener>
+<!-- 	<listener> -->
+<!-- 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class> -->
+<!-- 	</listener> -->
 
 	<!-- Processes application requests -->
-	<servlet>
-		<servlet-name>dispatcher</servlet-name>
-		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-		<!-- Configure DispatcherServlet to use AnnotationConfigWebApplicationContext
-		     instead of the default XmlWebApplicationContext -->
-		<init-param>
-		    <param-name>contextClass</param-name>
-		    <param-value>
-		        org.springframework.web.context.support.AnnotationConfigWebApplicationContext
-		    </param-value>
-		</init-param>
-		<!-- Again, config locations must consist of one or more comma- or space-delimited
-		     and fully-qualified @Configuration classes -->
-		<init-param>
- 		    <param-name>contextConfigLocation</param-name>
- 		    <param-value>com.garfiny.relationships.infrastructure.config.MvcConfig</param-value>
- 		</init-param>
-		<load-on-startup>1</load-on-startup>
-	</servlet>
+<!-- 	<servlet> -->
+<!-- 		<servlet-name>dispatcher</servlet-name> -->
+<!-- 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class> -->
+<!-- 		<init-param> -->
+<!-- 		    <param-name>contextClass</param-name> -->
+<!-- 		    <param-value> -->
+<!-- 		        org.springframework.web.context.support.AnnotationConfigWebApplicationContext -->
+<!-- 		    </param-value> -->
+<!-- 		</init-param> -->
+<!-- 		<init-param> -->
+<!--  		    <param-name>contextConfigLocation</param-name> -->
+<!--  		    <param-value>com.garfiny.relationships.infrastructure.config.MvcConfig</param-value> -->
+<!--  		</init-param> -->
+<!-- 		<load-on-startup>1</load-on-startup> -->
+<!-- 	</servlet> -->
 		
-	<servlet-mapping>
-		<servlet-name>dispatcher</servlet-name>
-		<url-pattern>/</url-pattern>
-	</servlet-mapping>
+<!-- 	<servlet-mapping> -->
+<!-- 		<servlet-name>dispatcher</servlet-name> -->
+<!-- 		<url-pattern>/</url-pattern> -->
+<!-- 	</servlet-mapping> -->
 
 </web-app>
