--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,24 +7,24 @@
 
     <description>relationships management system</description>
  
-    <context-param>
-        <param-name>defaultHtmlEscape</param-name>
-        <param-value>true</param-value>
-    </context-param>
+<!--     <context-param> -->
+<!--         <param-name>defaultHtmlEscape</param-name> -->
+<!--         <param-value>true</param-value> -->
+<!--     </context-param> -->
      
-    <session-config>
-        <session-timeout>30</session-timeout>
-    </session-config>
+<!--     <session-config> -->
+<!--         <session-timeout>30</session-timeout> -->
+<!--     </session-config> -->
      
-    <error-page>
-        <exception-type>java.lang.Exception</exception-type>
-        <location>/uncaughtException</location>
-    </error-page>
+<!--     <error-page> -->
+<!--         <exception-type>java.lang.Exception</exception-type> -->
+<!--         <location>/uncaughtException</location> -->
+<!--     </error-page> -->
      
-    <error-page>
-        <error-code>404</error-code>
-        <location>/resourceNotFound</location>
-    </error-page>
+<!--     <error-page> -->
+<!--         <error-code>404</error-code> -->
+<!--         <location>/resourceNotFound</location> -->
+<!--     </error-page> -->
 
 	
 	<!-- Configure ContextLoaderListener to use AnnotationConfigWebApplicationContext
